{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 85,
  "lineage": "b9f57c5c-f077-98b5-2f0d-93b12978041a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/loadBalancers/finalproject1-LoadBalancer/frontendIPConfigurations/finalproject1-PublicIPAddress",
                "name": "finalproject1-PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/publicIPAddresses/finalproject1-PublicIPForLB"
              }
            ],
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/loadBalancers/finalproject1-LoadBalancer",
            "location": "eastasia",
            "name": "finalproject1-LoadBalancer",
            "resource_group_name": "finalproject1-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/loadBalancers/finalproject1-LoadBalancer/backendAddressPools/finalproject1-AccPool",
            "loadbalancer_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/loadBalancers/finalproject1-LoadBalancer",
            "name": "finalproject1-AccPool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkInterfaces/finalproject1-Nic-vm1",
            "internal_domain_name_suffix": "fdeuzc1edk2upbm3xn5px1rcmb.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/virtualNetworks/finalproject1-Network/subnets/internal"
              }
            ],
            "location": "eastasia",
            "name": "finalproject1-Nic-vm1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "finalproject1-rg"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkInterfaces/finalproject1-Nic-vm2",
            "internal_domain_name_suffix": "fdeuzc1edk2upbm3xn5px1rcmb.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/virtualNetworks/finalproject1-Network/subnets/internal"
              }
            ],
            "location": "eastasia",
            "name": "finalproject1-Nic-vm2",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "finalproject1-rg"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/loadBalancers/finalproject1-LoadBalancer/backendAddressPools/finalproject1-AccPool",
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkInterfaces/finalproject1-Nic-vm1/ipConfigurations/internal|/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/loadBalancers/finalproject1-LoadBalancer/backendAddressPools/finalproject1-AccPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkInterfaces/finalproject1-Nic-vm1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/loadBalancers/finalproject1-LoadBalancer/backendAddressPools/finalproject1-AccPool",
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkInterfaces/finalproject1-Nic-vm2/ipConfigurations/internal|/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/loadBalancers/finalproject1-LoadBalancer/backendAddressPools/finalproject1-AccPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkInterfaces/finalproject1-Nic-vm2"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkSecurityGroups/finalproject1-NSG",
            "location": "eastasia",
            "name": "finalproject1-NSG",
            "resource_group_name": "finalproject1-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowVNetToVNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkSecurityGroups/finalproject1-NSG/securityRules/AllowVNetToVNet",
            "name": "AllowVNetToVNet",
            "network_security_group_name": "finalproject1-NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "finalproject1-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "DenyVNetInboundFromInternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkSecurityGroups/finalproject1-NSG/securityRules/DenyVNetInboundFromInternet",
            "name": "DenyVNetInboundFromInternet",
            "network_security_group_name": "finalproject1-NSG",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "finalproject1-rg",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/publicIPAddresses/finalproject1-PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.239.196.179",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "finalproject1-PublicIPForLB",
            "resource_group_name": "finalproject1-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/virtualNetworks/finalproject1-Network/subnets/internal",
            "name": "internal",
            "resource_group_name": "finalproject1-rg",
            "virtual_network_name": "finalproject1-Network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/virtualNetworks/finalproject1-Network/subnets/internal",
            "network_security_group_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/networkSecurityGroups/finalproject1-NSG",
            "subnet_id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/virtualNetworks/finalproject1-Network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8b4cc928-1a64-47b9-859d-bb7efbee2261",
            "id": "/subscriptions/426c2469-e71d-4b2a-acfa-79ddab462066/resourceGroups/finalproject1-rg/providers/Microsoft.Network/virtualNetworks/finalproject1-Network",
            "location": "eastasia",
            "name": "finalproject1-Network",
            "resource_group_name": "finalproject1-rg"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}